--- a/Restautrant/index.html
+++ b/Restautrant/index.html
@@ -103,7 +103,9 @@
     </div>
     <!-- footer -->
     <div id="footer">
-
+        <p class="footer-css">
+            Powered by <a href="https://www.w3schools.com/w3css/default.asp">w3.css</a>
+        </p>
     </div>
 </body>
 </html>
