--- a/theband/index.html
+++ b/theband/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="https://kit.fontawesome.com/e16151c4b1.css" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link rel="stylesheet" href="./design/style.css">
 <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400&family=Roboto+Mono&display=swap" rel="stylesheet">
     <title>The band</title>
 </head>
