--- a/Architest/index.html
+++ b/Architest/index.html
@@ -20,10 +20,76 @@
         </ul>
     </div>
     <div id="slider">
+        <div class="img-slider">
+            <img src="./design/img/architect.jpg" alt="">
+        </div>
+        <div class="slogan">
+            <h1 class="bold">
+                <b>BR</b>
 
+            </h1>
+            <h1>Architects</h1>
+        </div>
     </div>
     <div id="content">
-
+        <div class="project">
+            <h3>Projects</h3>
+        </div>
+        <div class="list-projects">
+            <div class="list-item">
+                <img src="./design/img/house2 (1).jpg" alt="">
+                <div class="name-item">Summer House</div>
+            </div>
+            <div class="list-item">
+                <img src="./design/img/house3 (1).jpg" alt="">
+                <div class="name-item">Summer House</div>
+            </div>  
+            <div class="list-item">
+                <img src="./design/img/house4 (1).jpg" alt="">
+                <div class="name-item">Summer House</div>
+            </div>
+            <div class="list-item">
+                <img src="./design/img/house5.jpg" alt="">
+                <div class="name-item">Summer House</div>
+            </div>
+            <div class="list-item">
+                <img src="./design/img/house2.jpg" alt="">
+                <div class="name-item">Summer House</div>
+            </div>
+            <div class="list-item">
+                <img src="./design/img/house4.jpg" alt="">
+                <div class="name-item">Summer House</div>
+            </div>
+            <div class="list-item">
+                <img src="./design/img/house5 (1).jpg" alt="">
+                <div class="name-item">Summer House</div>
+            </div>
+            <div class="list-item">
+                <img src="./design/img/house3 (1).jpg" alt="">
+                <div class="name-item">Summer House</div>
+            </div>
+        </div>
+        <div class="about">
+            <div class="project">
+                <h3>About</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                <div class="list-members">
+                    <div class="members-item">
+                        <img src="./design/img/team1.jpg" alt="">
+                        <div class="member-details">
+                            <h3>John Doe</h3>
+                            <p>CEO & Founder</p>
+                            <p class="member-text">
+                                Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.
+                            </p>
+                            <a href="" class="btn-profile">
+                                <button>Contact</button>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
     <div id="footer">
 
