--- a/Architest/index.html
+++ b/Architest/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./design/style.css">
     <link rel="stylesheet" href="./design/reponsive.css">
+    <link rel="icon" href="./design/img/house2.jpg">
     <title>Architects</title>
 </head>
 <body>
@@ -74,18 +75,57 @@
                 <h3>About</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                 <div class="list-members">
-                    <div class="members-item">
+                    <div class="member-item">
                         <img src="./design/img/team1.jpg" alt="">
-                        <div class="member-details">
-                            <h3>John Doe</h3>
-                            <p>CEO & Founder</p>
-                            <p class="member-text">
-                                Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.
-                            </p>
-                            <a href="" class="btn-profile">
-                                <button>Contact</button>
-                            </a>
-                        </div>
+                        <h3 class="about-name">Jane Doe</h3>
+                        <p class="career">
+                            Architect
+                        </p>
+                        <p class="career-details">
+                            Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.
+                        </p>
+                        <p class="btn-contact">
+                            <a href="#"><b>Contact</b></a>
+                        </p>
+                    </div>
+                    <div class="member-item">
+                        <img src="./design/img/team1.jpg" alt="">
+                        <h3 class="about-name">Jane Doe</h3>
+                        <p class="career">
+                            Architect
+                        </p>
+                        <p class="career-details">
+                            Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.
+                        </p>
+                        <p class="btn-contact">
+                            <a href="#"><b>Contact</b></a>
+                        </p>
+                    </div>
+                    <div class="member-item">
+                        <img src="./design/img/team1.jpg" alt="">
+                        <h3 class="about-name">Jane Doe</h3>
+                        <p class="career">
+                            Architect
+                        </p>
+                        <p class="career-details">
+                            Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.
+                        </p>
+                        <p class="btn-contact">
+                            <a href="#"><b>Contact</b></a>
+                        </p>
+                    </div>
+                    <div class="member-item">
+                        <img src="./design/img/team1.jpg" alt="">
+                        <h3 class="about-name">Jane Doe</h3>
+                        <p class="career">
+                            Architect
+                        </p>
+                        <p class="career-details">
+                            Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.
+                        </p>
+                        <p class="btn-contact">
+                            <a href="#"><b>Contact</b></a>
+                        </p>
                     </div>
                 </div>
             </div>
