rps mobile device

--- a/Architest/index.html
+++ b/Architest/index.html
@@ -29,7 +29,7 @@
                 <b>BR</b>
 
             </h1>
-            <h1>Architects</h1>
+            <h1 class="Architects">Architects</h1>
         </div>
     </div>
     <div id="content">
@@ -89,8 +89,8 @@
                         </p>
                     </div>
                     <div class="member-item">
-                        <img src="./design/img/team1.jpg" alt="">
-                        <h3 class="about-name">Jane Doe</h3>
+                        <img src="./design/img/team4.jpg" alt="">
+                        <h3 class="about-name">Dan Star</h3>
                         <p class="career">
                             Architect
                         </p>
@@ -102,8 +102,8 @@
                         </p>
                     </div>
                     <div class="member-item">
-                        <img src="./design/img/team1.jpg" alt="">
-                        <h3 class="about-name">Jane Doe</h3>
+                        <img src="./design/img/team3.jpg" alt="">
+                        <h3 class="about-name">Mike Ross</h3>
                         <p class="career">
                             Architect
                         </p>
@@ -115,10 +115,10 @@
                         </p>
                     </div>
                     <div class="member-item">
-                        <img src="./design/img/team1.jpg" alt="">
-                        <h3 class="about-name">Jane Doe</h3>
+                        <img src="./design/img/team2.jpg" alt="">
+                        <h3 class="about-name">John Doe</h3>
                         <p class="career">
-                            Architect
+                            CEO & Founder
                         </p>
                         <p class="career-details">
                             Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.
@@ -130,9 +130,29 @@
                 </div>
             </div>
         </div>
+        <div class="contact-infomation">
+            <h3>Contact</h3>
+            <hr>
+            <p>Lets get in touch and talk about your next project.</p>
+            <form action="" target="_blank" >
+                <input type="text" class="info" placeholder="Name" required="Name">
+                <input type="text" class="info" placeholder="Email" required="Email">
+                <input type="text" class="info" placeholder="Subject" required="Subject">
+                <input type="text" class="info" placeholder="Comment" required="Comment">
+                <button class="sendmessage">
+                    SEND MESSAGE
+                </button>
+                <div class="clear"></div>
+            </form>
+        </div>
+        <div class="container-img">
+            <img src="./design/img/map.jpg" alt="">
+        </div>
     </div>
     <div id="footer">
-
+        <div class="author">
+            Design by <a href="https://www.facebook.com/profile.php?id=100013440125094">Thành Dev</a>
+        </div>
     </div>
 </body>
 </html>
