--- a/Restautrant/index.html
+++ b/Restautrant/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Restautrant</title>
     <link rel="stylesheet" href="./design/style.css">
+    <script src="./javascript.js"></script>
 </head>
 <body>
     <div id="main">
